tests/compiler_errors/name_redefinitions/const_redef_const.tlp
const foo 1 end
const foo 2 end